@@ -25,42 +25,10 @@
 
 #include "operators.h"
 
-// OperatorRMHeader
-void
-OperatorRMHeader::initialize(Parser& p) {
-  Operator::initialize(p);
-
-  _header = p.get_arg();
-
-  require_resources(RSRC_SERVER_RESPONSE_HEADERS);
-  require_resources(RSRC_SERVER_REQUEST_HEADERS);
-  require_resources(RSRC_CLIENT_REQUEST_HEADERS);
-  require_resources(RSRC_CLIENT_RESPONSE_HEADERS);
-}
-
-
-void
-OperatorRMHeader::exec(const Resources& res) const
-{
-  TSMLoc field_loc, tmp;
-
-  if (res.bufp && res.hdr_loc) {
-    TSDebug(PLUGIN_NAME, "OperatorRMHeader::exec() invoked on header %s", _header.c_str());
-    field_loc = TSMimeHdrFieldFind(res.bufp, res.hdr_loc, _header.c_str(), _header.size());
-    while (field_loc) {
-      TSDebug(PLUGIN_NAME, "\tdeleting header %s", _header.c_str());
-      tmp = TSMimeHdrFieldNextDup(res.bufp, res.hdr_loc, field_loc);
-      TSMimeHdrFieldDestroy(res.bufp, res.hdr_loc, field_loc);
-      TSHandleMLocRelease(res.bufp, res.hdr_loc, field_loc);
-      field_loc = tmp;
-    }
-  }
-}
-
-
 // OperatorSetStatus
 void
-OperatorSetStatus::initialize(Parser& p) {
+OperatorSetStatus::initialize(Parser& p)
+{
   Operator::initialize(p);
 
   _status.set_value(p.get_arg());
@@ -79,7 +47,8 @@ OperatorSetStatus::initialize(Parser& p) {
 
 
 void
-OperatorSetStatus::initialize_hooks() {
+OperatorSetStatus::initialize_hooks()
+{
   add_allowed_hook(TS_HTTP_READ_RESPONSE_HDR_HOOK);
   add_allowed_hook(TS_HTTP_SEND_RESPONSE_HDR_HOOK);
 }
@@ -98,7 +67,8 @@ OperatorSetStatus::exec(const Resources& res) const
 
 // OperatorSetStatusReason
 void
-OperatorSetStatusReason::initialize(Parser& p) {
+OperatorSetStatusReason::initialize(Parser& p)
+{
   Operator::initialize(p);
 
   _reason.set_value(p.get_arg());
@@ -127,57 +97,11 @@ OperatorSetStatusReason::exec(const Resources& res) const {
 }
 
 
-// OperatorAddHeader
-void
-OperatorAddHeader::initialize(Parser& p) {
-  Operator::initialize(p);
-
-  _header = p.get_arg();
-  _value.set_value(p.get_value());
-  
-  require_resources(RSRC_SERVER_RESPONSE_HEADERS);
-  require_resources(RSRC_SERVER_REQUEST_HEADERS);
-  require_resources(RSRC_CLIENT_REQUEST_HEADERS);
-  require_resources(RSRC_CLIENT_RESPONSE_HEADERS);
-}
-
-
-void
-OperatorAddHeader::exec(const Resources& res) const
-{
-//  int IP = TSHttpTxnServerIPGet(res.txnp);
-//  inet_ntop(AF_INET, &IP, buf, sizeof(buf));
-  std::string value;
-
-  _value.append_value(value, res);
-
-  // Never set an empty header (I don't think that ever makes sense?)
-  if (value.empty()) {
-    TSDebug(PLUGIN_NAME, "Would set header %s to an empty value, skipping", _header.c_str());
-    return;
-  }
-  
-  if (res.bufp && res.hdr_loc) {
-    TSDebug(PLUGIN_NAME, "OperatorAddHeader::exec() invoked on header %s: %s", _header.c_str(), value.c_str());
-    TSMLoc field_loc;
-    
-    if (TS_SUCCESS == TSMimeHdrFieldCreateNamed(res.bufp, res.hdr_loc, _header.c_str(), _header.size(), &field_loc)) {
-      if (TS_SUCCESS == TSMimeHdrFieldValueStringInsert(res.bufp, res.hdr_loc, field_loc, -1, value.c_str(), value.size())) {
-        TSDebug(PLUGIN_NAME, "   adding header %s", _header.c_str());
-        //INKHttpHdrPrint(res.bufp, res.hdr_loc, reqBuff);
-        TSMimeHdrFieldAppend(res.bufp, res.hdr_loc, field_loc);
-      }
-      TSHandleMLocRelease(res.bufp, res.hdr_loc, field_loc);
-    }
-      
-  }
-}
-
-
 /// TODO and XXX: These currently only support when running as remap plugin.
 // OperatorSetDestination
 void
-OperatorSetDestination::initialize(Parser& p) {
+OperatorSetDestination::initialize(Parser& p)
+{
   Operator::initialize(p);
 
   _url_qual = parse_url_qualifier(p.get_arg());
@@ -262,7 +186,8 @@ OperatorSetDestination::exec(const Resources& res) const
 /// TODO and XXX: These currently only support when running as remap plugin.
 // OperatorSetRedirect
 void
-OperatorSetRedirect::initialize(Parser& p) {
+OperatorSetRedirect::initialize(Parser& p)
+{
   Operator::initialize(p);
 
   _status.set_value(p.get_arg());
@@ -328,7 +253,8 @@ OperatorSetRedirect::exec(const Resources& res) const
 
 // OperatorSetTimeoutOut
 void
-OperatorSetTimeoutOut::initialize(Parser& p) {
+OperatorSetTimeoutOut::initialize(Parser& p)
+{
   Operator::initialize(p);
 
   if (p.get_arg() == "active") {
@@ -377,3 +303,117 @@ OperatorSetTimeoutOut::exec(const Resources& res) const
   }
 }
 
+
+// OperatorRMHeader
+void
+OperatorRMHeader::exec(const Resources& res) const
+{
+  TSMLoc field_loc, tmp;
+
+  if (res.bufp && res.hdr_loc) {
+    TSDebug(PLUGIN_NAME, "OperatorRMHeader::exec() invoked on header %s", _header.c_str());
+    field_loc = TSMimeHdrFieldFind(res.bufp, res.hdr_loc, _header.c_str(), _header.size());
+    while (field_loc) {
+      TSDebug(PLUGIN_NAME, "\tdeleting header %s", _header.c_str());
+      tmp = TSMimeHdrFieldNextDup(res.bufp, res.hdr_loc, field_loc);
+      TSMimeHdrFieldDestroy(res.bufp, res.hdr_loc, field_loc);
+      TSHandleMLocRelease(res.bufp, res.hdr_loc, field_loc);
+      field_loc = tmp;
+    }
+  }
+}
+
+
+// OperatorAddHeader
+void
+OperatorAddHeader::initialize(Parser& p)
+{
+  OperatorHeaders::initialize(p);
+
+  _value.set_value(p.get_value());
+}
+
+void
+OperatorAddHeader::exec(const Resources& res) const
+{
+  std::string value;
+
+  _value.append_value(value, res);
+
+  // Never set an empty header (I don't think that ever makes sense?)
+  if (value.empty()) {
+    TSDebug(PLUGIN_NAME, "Would set header %s to an empty value, skipping", _header.c_str());
+    return;
+  }
+
+  if (res.bufp && res.hdr_loc) {
+    TSDebug(PLUGIN_NAME, "OperatorAddHeader::exec() invoked on header %s: %s", _header.c_str(), value.c_str());
+    TSMLoc field_loc;
+
+    if (TS_SUCCESS == TSMimeHdrFieldCreateNamed(res.bufp, res.hdr_loc, _header.c_str(), _header.size(), &field_loc)) {
+      if (TS_SUCCESS == TSMimeHdrFieldValueStringSet(res.bufp, res.hdr_loc, field_loc, -1, value.c_str(), value.size())) {
+        TSDebug(PLUGIN_NAME, "   adding header %s", _header.c_str());
+        TSMimeHdrFieldAppend(res.bufp, res.hdr_loc, field_loc);
+      }
+      TSHandleMLocRelease(res.bufp, res.hdr_loc, field_loc);
+    }
+  }
+}
+
+
+// OperatorSetHeader
+void
+OperatorSetHeader::initialize(Parser& p)
+{
+  OperatorHeaders::initialize(p);
+
+  _value.set_value(p.get_value());
+}
+
+void
+OperatorSetHeader::exec(const Resources& res) const
+{
+  std::string value;
+
+  _value.append_value(value, res);
+
+  // Never set an empty header (I don't think that ever makes sense?)
+  if (value.empty()) {
+    TSDebug(PLUGIN_NAME, "Would set header %s to an empty value, skipping", _header.c_str());
+    return;
+  }
+
+  if (res.bufp && res.hdr_loc) {
+    TSMLoc field_loc = TSMimeHdrFieldFind(res.bufp, res.hdr_loc, _header.c_str(), _header.size());
+
+    TSDebug(PLUGIN_NAME, "OperatorSetHeader::exec() invoked on header %s: %s", _header.c_str(), value.c_str());
+
+    if (!field_loc) {
+      // No existing header, so create one
+      if (TS_SUCCESS == TSMimeHdrFieldCreateNamed(res.bufp, res.hdr_loc, _header.c_str(), _header.size(), &field_loc)) {
+        if (TS_SUCCESS == TSMimeHdrFieldValueStringSet(res.bufp, res.hdr_loc, field_loc, -1, value.c_str(), value.size())) {
+          TSDebug(PLUGIN_NAME, "   adding header %s", _header.c_str());
+          TSMimeHdrFieldAppend(res.bufp, res.hdr_loc, field_loc);
+        }
+        TSHandleMLocRelease(res.bufp, res.hdr_loc, field_loc);
+      }
+    } else {
+      TSMLoc tmp = NULL;
+      bool first = true;
+
+      while (field_loc) {
+        if (first) {
+          first = false;
+          if (TS_SUCCESS == TSMimeHdrFieldValueStringSet(res.bufp, res.hdr_loc, field_loc, -1, value.c_str(), value.size())) {
+            TSDebug(PLUGIN_NAME, "   overwriting header %s", _header.c_str());
+          }
+        } else {
+          TSMimeHdrFieldDestroy(res.bufp, res.hdr_loc, field_loc);
+        }
+        tmp = TSMimeHdrFieldNextDup(res.bufp, res.hdr_loc, field_loc);
+        TSHandleMLocRelease(res.bufp, res.hdr_loc, field_loc);
+        field_loc = tmp;
+      }
+    }
+  }
+}
